--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>react-focuslostbox</title>
+        <meta charset="UTF-8" />
+    </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+    <body>
+        <div id="app"></div>
 
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.ts">
-	</script>
-</body>
-
+        <script src="src/index.jsx"></script>
+    </body>
 </html>
