--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
 
-        <script src="src/index.jsx"></script>
+        <script src="index.jsx"></script>
     </body>
 </html>
