Added accessibility, changed name and purpose slightly.

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>react-focuslostbox</title>
+        <title>react-focusarea</title>
         <meta charset="UTF-8" />
     </head>
 
